Add SEO improvements: Schema.org, Open Graph, San Diego location, sitemap, robots.txt

--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Schedule an appointment with Jacob Sadan. Contact for therapy inquiries and consultations.">
-    <meta name="keywords" content="contact therapist, schedule therapy appointment, Jacob Sadan contact">
-    <title>Contact & Schedule | Jacob Sadan Therapy</title>
+        content="Schedule an appointment with Jacob Sadan, licensed therapist in San Diego, CA. Contact for therapy inquiries and consultations.">
+    <meta name="keywords"
+        content="contact therapist San Diego, schedule therapy appointment California, Jacob Sadan contact, book therapy session">
+    <title>Contact & Schedule | Jacob Sadan - Therapist in San Diego, CA</title>
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://jacobsadan.com/contact.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jacobsadan.com/contact.html">
+    <meta property="og:title" content="Contact Jacob Sadan | Schedule Therapy in San Diego">
+    <meta property="og:description"
+        content="Schedule an appointment with Jacob Sadan, licensed therapist in San Diego, CA.">
+    <meta property="og:image" content="https://jacobsadan.com/jsadan.jpeg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Contact Jacob Sadan | Schedule Therapy in San Diego">
+    <meta name="twitter:description"
+        content="Schedule an appointment with Jacob Sadan, licensed therapist in San Diego, CA.">
+    <meta name="twitter:image" content="https://jacobsadan.com/jsadan.jpeg">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +36,7 @@
         rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="style.css?v=2">
+    <link rel="stylesheet" href="style.css?v=5">
 
     <style>
         /* Additional styles for contact page */
