--- a/index.html
+++ b/index.html
@@ -5,10 +5,82 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Jacob Sadan - Licensed Therapist specializing in ISTDP and faith-integrated psychotherapy. Real Therapy for Real Life.">
+    content="Jacob Sadan - Licensed Therapist in San Diego, CA specializing in ISTDP and faith-integrated psychotherapy. Real Therapy for Real Life.">
   <meta name="keywords"
-    content="therapist, ISTDP, psychotherapy, Orthodox Christian counseling, mental health, therapy">
-  <title>Jacob Sadan | Real Therapy for Real Life</title>
+    content="therapist San Diego, ISTDP therapy California, psychotherapy San Diego CA, Orthodox Christian counseling, mental health San Diego, therapist near me">
+  <title>Jacob Sadan | Therapist in San Diego, CA | Real Therapy for Real Life</title>
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://jacobsadan.com/">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://jacobsadan.com/">
+  <meta property="og:title" content="Jacob Sadan | Therapist in San Diego, CA">
+  <meta property="og:description"
+    content="Licensed Therapist specializing in ISTDP and faith-integrated psychotherapy. Real Therapy for Real Life.">
+  <meta property="og:image" content="https://jacobsadan.com/jsadan.jpeg">
+  <meta property="og:locale" content="en_US">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Jacob Sadan | Therapist in San Diego, CA">
+  <meta name="twitter:description"
+    content="Licensed Therapist specializing in ISTDP and faith-integrated psychotherapy. Real Therapy for Real Life.">
+  <meta name="twitter:image" content="https://jacobsadan.com/jsadan.jpeg">
+
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Psychologist",
+    "name": "Jacob Sadan",
+    "description": "Licensed Psychotherapist specializing in ISTDP and faith-integrated therapy",
+    "url": "https://jacobsadan.com",
+    "image": "https://jacobsadan.com/jsadan.jpeg",
+    "telephone": "(123) 456-7890",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "San Diego",
+      "addressRegion": "CA",
+      "addressCountry": "US"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "32.7157",
+      "longitude": "-117.1611"
+    },
+    "areaServed": {
+      "@type": "City",
+      "name": "San Diego"
+    },
+    "priceRange": "$$",
+    "openingHours": "Mo-Fr 09:00-18:00",
+    "sameAs": [],
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Therapy Services",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "ISTDP Therapy",
+            "description": "Intensive Short-Term Dynamic Psychotherapy"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Faith-Integrated Therapy",
+            "description": "Orthodox Christian faith-integrated psychotherapy"
+          }
+        }
+      ]
+    }
+  }
+  </script>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +90,7 @@
     rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css?v=3">
+  <link rel="stylesheet" href="style.css?v=5">
 </head>
 
 <body>
