--- a/media.html
+++ b/media.html
@@ -5,9 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Watch Jacob Sadan's media appearances on talk shows and news programs discussing mental health, therapy, and faith.">
-    <meta name="keywords" content="Jacob Sadan media, therapist interview, mental health news, psychology podcast">
-    <title>Media Appearances | Jacob Sadan Therapy</title>
+        content="Watch Jacob Sadan's media appearances discussing mental health, therapy, and faith. San Diego therapist featured on podcasts and talk shows.">
+    <meta name="keywords"
+        content="Jacob Sadan media, therapist interview, mental health podcast, San Diego psychology, therapy podcast">
+    <title>Media Appearances | Jacob Sadan - Therapist in San Diego, CA</title>
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://jacobsadan.com/media.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jacobsadan.com/media.html">
+    <meta property="og:title" content="Media Appearances | Jacob Sadan - San Diego Therapist">
+    <meta property="og:description"
+        content="Watch Jacob Sadan's media appearances discussing mental health, therapy, and faith.">
+    <meta property="og:image" content="https://jacobsadan.com/jsadan.jpeg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Media Appearances | Jacob Sadan - San Diego Therapist">
+    <meta name="twitter:description"
+        content="Watch Jacob Sadan's media appearances discussing mental health, therapy, and faith.">
+    <meta name="twitter:image" content="https://jacobsadan.com/jsadan.jpeg">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +36,7 @@
         rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="style.css?v=2">
+    <link rel="stylesheet" href="style.css?v=5">
 
     <style>
         /* Additional styles for media page */
