--- a/about.html
+++ b/about.html
@@ -5,10 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Learn about Jacob Sadan's therapeutic approach including ISTDP and Orthodox Christian faith-integrated psychotherapy.">
+        content="Learn about Jacob Sadan's therapeutic approach in San Diego, CA. Specializing in ISTDP and Orthodox Christian faith-integrated psychotherapy.">
     <meta name="keywords"
-        content="ISTDP, intensive short-term dynamic psychotherapy, Orthodox Christian therapy, faith-based counseling">
-    <title>About & Method | Jacob Sadan Therapy</title>
+        content="ISTDP San Diego, intensive short-term dynamic psychotherapy California, Orthodox Christian therapy, faith-based counseling San Diego">
+    <title>About & Method | Jacob Sadan - Therapist in San Diego, CA</title>
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://jacobsadan.com/about.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jacobsadan.com/about.html">
+    <meta property="og:title" content="About Jacob Sadan | ISTDP Therapist in San Diego">
+    <meta property="og:description"
+        content="Learn about Jacob Sadan's therapeutic approach including ISTDP and faith-integrated psychotherapy.">
+    <meta property="og:image" content="https://jacobsadan.com/jsadan.jpeg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About Jacob Sadan | ISTDP Therapist in San Diego">
+    <meta name="twitter:description"
+        content="Learn about Jacob Sadan's therapeutic approach including ISTDP and faith-integrated psychotherapy.">
+    <meta name="twitter:image" content="https://jacobsadan.com/jsadan.jpeg">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +36,7 @@
         rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="style.css?v=2">
+    <link rel="stylesheet" href="style.css?v=5">
 </head>
 
 <body>
