Content updates: fix Safe Space heading, remove em dashes, add embedded media videos

--- a/about.html
+++ b/about.html
@@ -117,15 +117,15 @@
                     <h2>ISTDP: Intensive Short-Term Dynamic Psychotherapy</h2>
                     <p>
                         ISTDP is a powerful, evidence-based form of psychotherapy that focuses on helping
-                        you access and experience emotions that have been buried or avoided—often since childhood.
+                        you access and experience emotions that have been buried or avoided, often since childhood.
                         Unlike traditional talk therapy that can take years, ISTDP is designed to create
                         meaningful change in a shorter timeframe.
                     </p>
 
                     <h3>How ISTDP Works</h3>
                     <p>
-                        At its core, ISTDP recognizes that many psychological symptoms—anxiety, depression,
-                        chronic relationship problems—are often the result of unconscious defenses against
+                        At its core, ISTDP recognizes that many psychological symptoms, such as anxiety, depression,
+                        and chronic relationship problems, are often the result of unconscious defenses against
                         painful emotions. By gently but directly addressing these defenses, we can access
                         the underlying feelings and resolve long-standing patterns.
                     </p>
@@ -179,13 +179,14 @@
                     <p>
                         For clients who desire it, I offer therapy that thoughtfully integrates Orthodox Christian
                         spirituality with evidence-based psychological treatment. This approach recognizes that
-                        for many people, faith is not separate from mental health—it's central to understanding
+                        for many people, faith is not separate from mental health. It is central to understanding
                         who we are and how we heal.
                     </p>
 
                     <h3>The Orthodox Christian Lens</h3>
                     <p>
-                        Orthodox Christianity has a rich tradition of understanding the human person—the relationship
+                        Orthodox Christianity has a rich tradition of understanding the human person, including the
+                        relationship
                         between body, soul, and spirit, the nature of passions and virtues, and the path toward
                         theosis (union with God). This ancient wisdom offers profound insights that complement
                         modern psychological understanding.
@@ -231,14 +232,14 @@
                 <h2>My Therapeutic Philosophy</h2>
                 <p style="font-size: var(--text-lg); color: var(--color-text-light); margin-top: var(--space-lg);">
                     I believe that every person has an innate capacity for healing and growth. My role is not
-                    to fix you—you're not broken. Rather, it's to create conditions where you can access
-                    your own wisdom, feel what you've been avoiding, and make the changes you've always
+                    to fix you, because you are not broken. Rather, it is to create conditions where you can access
+                    your own wisdom, feel what you have been avoiding, and make the changes you have always
                     known you needed to make.
                 </p>
                 <p style="font-size: var(--text-lg); color: var(--color-text-light);">
-                    Real therapy isn't always comfortable. It requires honesty, courage, and a willingness
-                    to face difficult truths. But if you're ready to do that work, the rewards—greater
-                    peace, deeper relationships, authentic self-expression—are profound.
+                    Real therapy is not always comfortable. It requires honesty, courage, and a willingness
+                    to face difficult truths. But if you are ready to do that work, the rewards (greater
+                    peace, deeper relationships, authentic self-expression) are profound.
                 </p>
                 <p
                     style="font-size: var(--text-xl); color: var(--color-primary); font-style: italic; margin-top: var(--space-xl);">
