--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
           <img src="jsadan.jpeg" alt="Jacob Sadan - Licensed Psychotherapist" class="about-preview__img">
         </div>
         <div class="about-preview__content slide-in-right">
-          <h2>Welcome to a Safe Space for Healing</h2>
+          <h2>Therapy That Gets to the Heart of the Matter</h2>
           <p>
             I'm Jacob Sadan, a licensed psychotherapist dedicated to helping individuals navigate life's
             challenges with courage and clarity. My practice is built on the belief that true healing
-            happens when we address not just symptoms, but the whole person—mind, heart, and spirit.
+            happens when we address not just symptoms, but the whole person: mind, heart, and spirit.
           </p>
           <p>
             Whether you're struggling with anxiety, depression, relationship issues, or searching for
@@ -184,7 +184,7 @@
           </div>
           <h4 class="method-card__title">ISTDP</h4>
           <p class="card__text">
-            Intensive Short-Term Dynamic Psychotherapy—a powerful, research-backed approach that
+            Intensive Short-Term Dynamic Psychotherapy is a powerful, research-backed approach that
             helps uncover and process buried emotions, leading to rapid and lasting change.
           </p>
         </div>
@@ -218,12 +218,7 @@
         </div>
       </div>
 
-      <div class="text-center fade-in" style="margin-top: var(--space-2xl);">
-        <a href="about.html" class="btn btn--outline"
-          style="border-color: var(--color-primary); color: var(--color-primary);">
-          Explore My Full Approach
-        </a>
-      </div>
+
     </div>
   </section>
 
@@ -250,7 +245,7 @@
         <div class="testimonial-card fade-in">
           <p class="testimonial-card__quote">
             I was skeptical about therapy, but Jacob's direct yet compassionate approach made all
-            the difference. He doesn't just listen—he helps you actually work through things.
+            the difference. He does not just listen. He helps you actually work through things.
           </p>
           <p class="testimonial-card__author">— Michael T.</p>
           <p class="testimonial-card__detail">Depression & Life Transitions</p>
