--- a/about.html
+++ b/about.html
@@ -151,16 +151,8 @@
                     </ul>
                 </div>
                 <div class="approach__image slide-in-right">
-                    <div class="approach__img photo-placeholder" style="height: 600px; border-radius: 1.5rem;">
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="none"
-                                viewBox="0 0 24 24" stroke="currentColor" style="opacity: 0.5; margin: 0 auto 1rem;">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
-                                    d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
-                            </svg>
-                            <p style="margin: 0;">ISTDP Therapy Session</p>
-                        </div>
-                    </div>
+                    <img src="istdp_therapy.png" alt="Calming therapy office setting" class="approach__img"
+                        style="height: 600px; border-radius: 1.5rem; object-fit: cover; width: 100%;">
                 </div>
             </div>
         </div>
@@ -210,16 +202,9 @@
                     </p>
                 </div>
                 <div class="approach__image slide-in-left">
-                    <div class="approach__img photo-placeholder" style="height: 600px; border-radius: 1.5rem;">
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="none"
-                                viewBox="0 0 24 24" stroke="currentColor" style="opacity: 0.5; margin: 0 auto 1rem;">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
-                                    d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
-                            </svg>
-                            <p style="margin: 0;">Faith & Healing</p>
-                        </div>
-                    </div>
+                    <img src="faith_healing.png" alt="Serene spiritual scene representing faith and healing"
+                        class="approach__img"
+                        style="height: 600px; border-radius: 1.5rem; object-fit: cover; width: 100%;">
                 </div>
             </div>
         </div>
