--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             Whether you're struggling with anxiety, depression, relationship issues, or searching for
             deeper meaning, I'm here to walk alongside you on your journey toward wholeness.
           </p>
-          <a href="about.html" class="btn btn--primary">Learn More About My Approach</a>
+          <a href="about.html" class="btn btn--primary">Learn More About Me</a>
         </div>
       </div>
     </div>
