--- a/about.html
+++ b/about.html
@@ -11,22 +11,22 @@
     <title>About & Method | Jacob Sadan - Therapist in San Diego, CA</title>
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://jacobsadan.com/about.html">
+    <link rel="canonical" href="https://jacob-wahbeh.github.io/Therapist_website/about.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jacobsadan.com/about.html">
+    <meta property="og:url" content="https://jacob-wahbeh.github.io/Therapist_website/about.html">
     <meta property="og:title" content="About Jacob Sadan | ISTDP Therapist in San Diego">
     <meta property="og:description"
         content="Learn about Jacob Sadan's therapeutic approach including ISTDP and faith-integrated psychotherapy.">
-    <meta property="og:image" content="https://jacobsadan.com/jsadan.jpeg">
+    <meta property="og:image" content="https://jacob-wahbeh.github.io/Therapist_website/jsadan.jpeg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="About Jacob Sadan | ISTDP Therapist in San Diego">
     <meta name="twitter:description"
         content="Learn about Jacob Sadan's therapeutic approach including ISTDP and faith-integrated psychotherapy.">
-    <meta name="twitter:image" content="https://jacobsadan.com/jsadan.jpeg">
+    <meta name="twitter:image" content="https://jacob-wahbeh.github.io/Therapist_website/jsadan.jpeg">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
