--- a/contact.html
+++ b/contact.html
@@ -11,22 +11,22 @@
     <title>Contact & Schedule | Jacob Sadan - Therapist in San Diego, CA</title>
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://jacobsadan.com/contact.html">
+    <link rel="canonical" href="https://jacob-wahbeh.github.io/Therapist_website/contact.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jacobsadan.com/contact.html">
+    <meta property="og:url" content="https://jacob-wahbeh.github.io/Therapist_website/contact.html">
     <meta property="og:title" content="Contact Jacob Sadan | Schedule Therapy in San Diego">
     <meta property="og:description"
         content="Schedule an appointment with Jacob Sadan, licensed therapist in San Diego, CA.">
-    <meta property="og:image" content="https://jacobsadan.com/jsadan.jpeg">
+    <meta property="og:image" content="https://jacob-wahbeh.github.io/Therapist_website/jsadan.jpeg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Contact Jacob Sadan | Schedule Therapy in San Diego">
     <meta name="twitter:description"
         content="Schedule an appointment with Jacob Sadan, licensed therapist in San Diego, CA.">
-    <meta name="twitter:image" content="https://jacobsadan.com/jsadan.jpeg">
+    <meta name="twitter:image" content="https://jacob-wahbeh.github.io/Therapist_website/jsadan.jpeg">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
